Cerate the image folder

--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
     </div>
     <div class="photos">
       <h2 class="photos-header">These are memories of Christmas in 2023...</h2>
-      <img src="./img1.jpg" alt="image" />
+      <img src="./Images/img1.jpg" alt="image" />
       <p class="photos-sentence">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident
         aperiam illo hic ea deserunt eveniet amet ad neque, suscipit earum.
         Consequuntur, illum dolor. Consequuntur, a. Cupiditate eligendi beatae
         autem non?
       </p>
-      <img src="./img2.jpg" alt="image" />
+      <img src="./Images/img2.jpg" alt="image" />
       <p class="photos-sentence">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem itaque
         voluptatibus laborum eaque corrupti! Distinctio adipisci sequi deleniti
         laboriosam repellendus quidem velit dolor, quaerat sit et ullam!
         Officiis, nobis in.
       </p>
-      <img src="./img3.jpg" alt="image" />
+      <img src="./Images/img3.jpg" alt="image" />
       <p class="photos-sentence">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, qui
         minima. Fugit numquam, optio suscipit necessitatibus totam neque nisi
