Added a respnsible design

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="./title.css" />
-    <link rel="stylesheet" type="text/css" href="photos.css" />
-    <link rel="stylesheet" href="./bottom.css" />
+    <link rel="stylesheet" type="text/css" href="./Style/title.css" />
+    <link rel="stylesheet" type="text/css" href="./Style/style.css" />
+    <link rel="stylesheet" type="text/css" href="./Style/photos.css" />
+    <link rel="stylesheet" type="text/css" href="./Style/bottom.css" />
     <title>Christmas website</title>
   </head>
   <body>
@@ -49,7 +49,7 @@
           <p>Christmas</p>
         </div>
         <div class="back">
-          <h2>Dear Mei,</h2>
+          <h2 class="back-h2">Dear Mei,</h2>
           <p>Merry Christmas, Mei!</p>
           <p>
             Thank you for the amazing Christmas dinner and the sweet time last
@@ -66,44 +66,52 @@
     </div>
     <div class="photos">
       <h2 class="photos-header">These are memories of Christmas in 2023...</h2>
-      <img src="./Images/img1.jpg" alt="image" />
-      <p class="photos-sentence">
-        She prepared Christmas dinner on Christmas night, and it was absolutely
-        delicious. The chicken and roast beef were particularly outstanding. The
-        chicken had a wonderfully crispy skin with a delightful teriyaki flavor.
-        The roast beef had a perfect texture—slightly soft, yet still chewy and
-        juicy. Every dish was excellent, and we thoroughly enjoyed the meal.
-      </p>
-      <img src="./Images/img2.jpg" alt="image" />
-      <p class="photos-sentence">
-        We visited Autostrada Osteria before Christmas to celebrate our monthly
-        anniversary and the upcoming holiday. Although it was our first time
-        there, we had an amazing dinner experience due to the restaurant's great
-        ambiance and the server's funny and kind demeanor. Autostrada Osteria is
-        known for its pasta and risotto, so we ordered pasta, veal, beef steak,
-        and fish soup. The dishes were delicious, and we were eager to return.
-        Unfortunately, we recently learned that the restaurant is closing. Now,
-        we need to find an alternative, but we doubt we'll find a place that
-        satisfies us as much as Autostrada Osteria did.
-      </p>
-      <img src="./Images/img3.jpg" alt="image" />
-      <p class="photos-sentence">
-        We also visited the Christmas market, and it turned out to be a lot of
-        fun. We were pleasantly surprised by the large crowd, and there was even
-        a long line for reserved times. So, we decided to change our plans and
-        grab sushi first. It was a great idea, and we found ourselves missing
-        Sushi Yan. After enjoying our sushi, we strolled through almost all of
-        the market's stores. We got a cup of hot wine and the specific item she
-        wanted this year. I couldn't resist trying a hurricane potato, which was
-        both long and tasty. The wine had its effect on me, and I started
-        feeling a bit drunk. Nevertheless, it was a fun night! While we didn't
-        get to see any snow, the weather wasn't too cold, so everything was
-        okay.
-      </p>
+      <div class="photos-container">
+        <img src="./Images/img1.jpg" alt="image" class="photos-img" />
+        <p class="photos-sentence">
+          She prepared Christmas dinner on Christmas night, and it was
+          absolutely delicious. The chicken and roast beef were particularly
+          outstanding. The chicken had a wonderfully crispy skin with a
+          delightful teriyaki flavor. The roast beef had a perfect
+          texture—slightly soft, yet still chewy and juicy. Every dish was
+          excellent, and we thoroughly enjoyed the meal.
+        </p>
+      </div>
+      <div class="photos-container">
+        <img src="./Images/img2.jpg" alt="image" class="photos-img" />
+        <p class="photos-sentence">
+          We visited Autostrada Osteria before Christmas to celebrate our
+          monthly anniversary and the upcoming holiday. Although it was our
+          first time there, we had an amazing dinner experience due to the
+          restaurant's great ambiance and the server's funny and kind demeanor.
+          Autostrada Osteria is known for its pasta and risotto, so we ordered
+          pasta, veal, beef steak, and fish soup. The dishes were delicious, and
+          we were eager to return. Unfortunately, we recently learned that the
+          restaurant is closing. Now, we need to find an alternative, but we
+          doubt we'll find a place that satisfies us as much as Autostrada
+          Osteria did.
+        </p>
+      </div>
+      <div class="photos-container">
+        <img src="./Images/img3.jpg" alt="image" class="photos-img" />
+        <p class="photos-sentence">
+          We also visited the Christmas market, and it turned out to be a lot of
+          fun. We were pleasantly surprised by the large crowd, and there was
+          even a long line for reserved times. So, we decided to change our
+          plans and grab sushi first. It was a great idea, and we found
+          ourselves missing Sushi Yan. After enjoying our sushi, we strolled
+          through almost all of the market's stores. We got a cup of hot wine
+          and the specific item she wanted this year. I couldn't resist trying a
+          hurricane potato, which was both long and tasty. The wine had its
+          effect on me, and I started feeling a bit drunk. Nevertheless, it was
+          a fun night! While we didn't get to see any snow, the weather wasn't
+          too cold, so everything was okay.
+        </p>
+      </div>
     </div>
     <div class="bottom">
-      <h1>Thank you Christmas in 2023!</h1>
-      <h1>See you in 2024!!</h1>
+      <h1 class="bottom-h1">Thank you Christmas in 2023!</h1>
+      <h1 class="bottom-h1">See you in 2024!!</h1>
     </div>
   </body>
   <script>
